--- a/VideoGameTrading/appsettings.json
+++ b/VideoGameTrading/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MySqlConnection": "server=gametesting.mysql.database.azure.com;port=3306;user=johnsmith;password=Secret!123;database=gametesting;"
+  }
 }
