Term Project - Draft - v6

--- a/VideoGameTrading/appsettings.Production.json
+++ b/VideoGameTrading/appsettings.Production.json
@@ -6,6 +6,6 @@
 		}
 	},
 	"ConnectionStrings": {
-		"MySqlConnection": "server=gametesting.mysql.database.azure.com;port=3306;user=johnsmith;password=Secret!123;database=gametesting;"
+		"MySqlConnection": "server=gametrading.mysql.database.azure.com;port=3306;user=johnsmith;password=Secret!123;database=gametrading;"
 	}
 }
