--- a/VideoGameTrading/appsettings.Development.json
+++ b/VideoGameTrading/appsettings.Development.json
@@ -6,6 +6,6 @@
 		}
 	},
 	"ConnectionStrings": {
-		"MySqlConnection": "server=localhost;userid=johnsmith;password=Secret!123;database=GameTesting;"
+		"MySqlConnection": "server=localhost;userid=johnsmith;password=Secret!123;database=gametrading;"
 	}
 }
